# protohackers

0_smoke_test/src/: main.rs
1_prime_time/: Cargo.toml
3_budget_chat/src/: main.rs
4_unusual_database/src/: main.rs
5_mob_in_the_middle/src/: main.rs
6_speed_daemon/: Cargo.toml
6_speed_daemon/src/: main.rs  messages.rs  roadnetwork.rs
budgetchat/src/: main.rs
meanstoanend/src/: main.rs
mobinthemiddle/: Cargo.toml
mobinthemiddle/src/: main.rs
primetime/: Cargo.toml  test.txt
primetime/src/: main.rs
unusualdatabase/src/: main.rs
