[package]
name = "primetime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.93"
tokio = {version = "1.25.0", features = ["full"]}
serde = {version = "1.0.152", features = ["derive"]}
primes = "0.3.0"
