[package]
name = "primetime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.93"
tokio = {version = "1.25.0", features = ["full"]}
serde = {version = "1.0.152", features = ["derive"]}
primes = "0.3.0"
tokio-util = { version = "0.7.7", features = ["full"] }
dashmap = "5.4.0"
bytes = "1.4.0"
tokio-stream = "0.1.12"
futures = "0.3.26"
stream-cancel = "0.8.1"
async-channel = "1.8.0"
